@@ -1,3 +1,7 @@
+2005-05-06  Jim Blandy  <jimb@redhat.com>
+
+	* pprint.scm, cos-pprint.scm: New files.
+
 2005-04-04  Nick Clifton  <nickc@redhat.com>
 
 	* opcodes.scm (-gen-parse-address): Initialise value to zero to
